// `Security` to invite users to upgrade in case of vulnerabilities.

v1.9.0 (unreleased)
-------------------

Added
~~~~~

- Initial support for Qt 5.14.
- New `tabs.tooltips` setting which can be used to disable hover tooltips for
  tabs.
- New settings to configure the appearance of context menus:
  - `fonts.contextmenu`
  - `colors.contextmenu.bg`
  - `colors.contextmenu.fg`

Changed
~~~~~~~

- The `content.headers.user_agent` setting now is a format string with the
  default value resembling the behavior of it being set to null before.
  This slightly changes the sent user agent for QtWebKit: Instead of mentioning
  qutebrowser and its version it now mentions the Qt version.
- The `qute-pass` userscript now has a new `--extra-url-suffixes` (`-s`)
  argument which passes extra URL suffixes to the tldextract library.
- A stack is now used for `:tab-focus last` rather than just saving one tab.
  Additionally, `:tab-focus` now understands `stack-prev` and `stack-next`
  arguments to traverse that stack.
- `:hint` now has a new `right-click` target which allows right-clicking
  elements via hints.
- The Terminus font has been removed from the default monospace fonts since it
  caused trouble with HighDPI setups. To get it back, add either
  `"xos4 Terminus"` or `Terminus` (depending on fontconfig version) to the
  beginning of the `fonts.monospace` setting.
- As a workaround for a Qt bug causing a segfault, desktop sharing is now
  automatically rejected on Qt versions before 5.13.2. Note that screen sharing
  still won't work on Linux until Qt 5.14.
- Comment lines in quickmarks/bookmarks files are now ignored. However, note that
  qutebrowser will overwrite those files if bookmark/quickmark commands are used.
- Reopening PDF.js pages from e.g. a session file will now re-download and
  display those PDFs.
- Improved behavior when using `:open-download` in a sandboxed environment (KDE
  Flatpak).